--- a/style/style.css
+++ b/style/style.css
@@ -33,13 +33,13 @@ header{
     left: 0;
     z-index: 100;
     width: 100%;
-    height: 70px;
+    height: 50px;
     background: #fff;
     box-shadow: 1px 1px 0 rgba(0, 0, 0, .2);
 }
 header .inner{
     width: 96vw;
-    height: 70px;
+    height: 50px;
     margin: 0 auto;
     position: relative;
 }
@@ -49,8 +49,9 @@ h1{
     letter-spacing: -1px;
     line-height: 70px;
 }
-h1 a{
-    color: #000;
+h1 svg{
+    width: 50px;
+    height: 50px;
 }
 #nav{
     position: absolute;
@@ -66,7 +67,7 @@ h1 a{
     width: 80px;
     display: inline-block;
     font-size: 1rem;
-    line-height: 70px;
+    line-height: 50px;
     text-align: center;
 }
 #nav ul li a {
@@ -81,7 +82,7 @@ h1 a{
     content:"";
     background:#222;
     position: absolute;
-    bottom:-1px;
+    bottom: -1px;
     left: 50%;
     width: 0;
     height:.18rem;
@@ -101,11 +102,11 @@ h1 a{
     display: none;
     position: relative;
     width: 50px;
-    height: 70px;
+    height: 50px;
     float: right;
     margin-right: 2vw;
     cursor: pointer;
-    line-height: 70px; 
+    line-height: 50px; 
 }
 /*icon-menu*/
 .mNav .nav-icon{
@@ -121,16 +122,16 @@ h1 a{
     transition: .25s ease-in-out;
 }
 .mNav .nav-icon:nth-child(1) {
-    top: 15px;
+    top: 8px;
 } 
 .mNav .nav-icon:nth-child(2),.mNav .nav-icon:nth-child(3) {
-    top: 30px;
+    top: 23px;
 }
 .mNav .nav-icon:nth-child(4) {
-    top: 45px;
+    top: 38px;
 }
 .mNav.open .nav-icon:nth-child(1) {
-    top: 18px;
+    top: 16px;
     width: 0%;
     left: 50%;
 }
@@ -141,7 +142,7 @@ h1 a{
     transform: rotate(-45deg);
 }
 .mNav.open .nav-icon:nth-child(4) {
-    top: 18px;
+    top: 16px;
     width: 0%;
     left: 50%;
 }
