--- a/style/style.css
+++ b/style/style.css
@@ -26,6 +26,25 @@ a {
     align-items: center;
     z-index: 101;
 }
+.spin{
+    width: 150px;
+    height: 150px;
+    border: 16px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 16px solid #ffbbbb;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  from { 
+      transform: rotate(0deg); 
+    }
+  to { 
+      transform: rotate(360deg); 
+    }
+}
 /*nav*/
 header{
     position: fixed;
